--- a/site/css/main.css
+++ b/site/css/main.css
@@ -99,17 +99,44 @@ textarea {
 
 
 body {
-	margin: 0;
-	padding: 0;
 	background: url(../img/bgtile.png) top left repeat;
 }
 
-.mainnav {
+.header {
 	background: url(../img/navbar-bg.png) top left repeat-x;
 	width: 100%;
-	height: 84px;
 	border: 3px solid #f2a93e;
+    -webkit-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.3);
 }
+    .header .logo {
+        padding: 12px 0 0 0;
+    }
+    .header .header-inner {
+        width: 900px;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+
+.mainnav {
+    overflow: hidden;
+    float: right;
+    background: url(../img/divider-vert.png) top right no-repeat;
+    min-height:79px;
+}
+    .mainnav .mainnav-item {
+        float: left;
+        padding: 5px 10px 0 0;
+        color: #e38e15;
+        text-transform: uppercase;
+        font-family: "franklin-gothic-ext-comp-urw",sans-serif;
+        font-size: 1.6em;
+        letter-spacing: 0.07em;
+        vertical-align: top;
+    }
+    .mainnav .mainnav-item:last-of-type {
+        padding-right: 28px;
+    }
 
 .wrap {
 	width: 900px;
@@ -136,6 +163,48 @@ body {
 	background: url(../img/divider.png) top left no-repeat;
 }
 
+.social {
+    position: fixed;
+    top: 300px;
+    left: 0;
+    width: 35px;
+    height: 100px;
+    background: #CCC;
+}
+
+/* --------------------------------
+    Key Offerings Section
+-------------------------------- */
+
+.keyofferings {
+
+}
+    .keyofferings h1 {
+        font-weight: normal;
+        font-family: "freight-text-pro",serif;
+        font-size: 3em;
+        color: #666;
+        text-align: center;
+    }
+    .keyofferings-list {
+        overflow: hidden;
+        width: 820px;
+        margin: 0 auto;
+    }
+        .keyofferings-list-item {
+            float: left;
+            display: block;
+            padding: 10px 0 6px 0;
+            margin: 0 10px 10px 0;
+            width: 400px;
+            background: rgb(200,50,50);
+            text-align: center;
+            font-family: "franklin-gothic-ext-comp-urw",sans-serif;
+            font-size: 1.6em;
+            color: #fff;
+            -webkit-box-shadow: inset 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
+                    box-shadow: inset 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
+        }
 
 
 
