--- a/site/css/main.css
+++ b/site/css/main.css
@@ -388,20 +388,36 @@ textarea {
     }
 
     .casestudies .casestudy {
-
+        position: relative;
+        padding: 20px 0 0 0;
+    }
+    .casestudies .casestudy p {
+        font-family: "freight-text-pro",serif;
+        color: #515052;
+    }
+    .casestudy .casestudy-images {
+        background-size: contain;
+        width: 100%;
+        min-height: 1000px;
+        position: absolute;
+        background-position: top left;
+        background-repeat: no-repeat;
     }
     .casestudy .casestudy-content {
-        background: rgba(249,247,246, 0.8);
+        background: rgba(249,247,246, 0.9);
         padding: 20px;
-        margin: 50px 0 0 450px;
-        width: 390px;
+        margin: 30px 0 0 340px;
+        width: 373px;
         position: relative;
         -webkit-box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.2);
                 box-shadow: 0px 3px 12px 3px rgba(0, 0, 0, 0.2);
     }
     .casestudy .casestudy-content .paddles {
-        position: relative;
+        width: 100%;
+        position: absolute;
         display: block;
+        padding: 0;
+        margin: 0;
     }
     .casestudy .casestudy-content .paddles .paddle {
         position: absolute;
@@ -428,7 +444,7 @@ textarea {
         left: -72px; /* 52px (width of paddle) + 20px (padding on .casestudy-content) */
     }
     .casestudy .casestudy-content .paddles .paddle.next {
-        right: -72px;
+        right: -32px;
     }
 
     .casestudy-content h1 {
@@ -439,6 +455,84 @@ textarea {
     .casestudy-content .casestudy-content-header {
 
     }
+
+
+/* --------------------------------
+    Team Section
+-------------------------------- */
+
+.team {
+    background: url(../img/bgtile.png) top left repeat;
+}
+.team h1 {
+    font-family: "freight-text-pro",serif;
+    color: #514f52;
+    font-weight: normal;
+    font-size: 3em;
+    margin-top: 0;
+    padding: 1em 0 0 0;
+    text-align: center;
+    letter-spacing: 1px;
+}
+.team h1 .emphasized {
+    font-family: "franklin-gothic-ext-comp-urw",sans-serif;
+    text-transform: uppercase;
+}
+.team h1 .emphasized.title-first {
+    color: #f89728;
+}
+.team h1 .emphasized.title-second {
+    color: #84b6b4;
+}
+.team h1 .emphasized.title-third {
+    color: #8c717a;
+}
+
+.team .team-members {
+    overflow: hidden;
+}
+.team .team-members li {
+    display: block;
+    float: left;
+    width: 178px;
+}
+.team .team-members li img {
+    border: 1px solid rgb(248, 151, 40);
+}
+.team .team-members li h3,
+.team .team-members li h4,
+.team .team-members li h5 {
+    margin: 0;
+    padding: 0;
+    font-family: "franklin-gothic-ext-comp-urw",sans-serif;
+    text-transform: uppercase;
+    font-size: 1.3em;
+    font-weight: normal;
+    letter-spacing: 1.5px;
+    color: #fff;
+    line-height: 1;
+    text-shadow: 1px 1px 0px rgb(80,80,80);
+    filter: dropshadow(color=#666666, offx=1, offy=1);
+}
+.team .team-members li h3 {
+    padding-bottom: 0.5em;
+}
+.team .team-members .team-member {
+    overflow: hidden;
+    position: relative;
+    margin: 0 15px 15px 0;
+}
+.team .team-members .team-member-details {
+    position: absolute;
+    background: rgba(248,151,40, 0.85);
+    top: 140px;
+    left: 0;
+    padding: 10px;
+    -webkit-transition: all 0.5s ease-in-out;
+}
+.team .team-members .team-member-details:hover {
+    top: 0;
+}
 
 
 
