--- a/site/css/main.css
+++ b/site/css/main.css
@@ -101,10 +101,53 @@ textarea {
 /* --------------------------------
     Common Elements
 -------------------------------- */
+
+body, 
+.intro {
+    background: url(../img/bgtile.png) top left repeat;
+}
+
+h1, h2, h3, h4, h5, p {
+    font-family: "freight-text-pro",serif;
+    color: #514f52;
+}
+h1 .emphasized {
+    font-family: "franklin-gothic-ext-comp-urw",sans-serif;
+    text-transform: uppercase;
+}
+h1 .emphasized.title-first {
+    color: #f89728;
+}
+h1 .emphasized.title-second {
+    color: #84b6b4;
+}
+h1 .emphasized.title-third {
+    color: #8c717a;
+}
+
 .row {
     width: 900px;
     margin: 0 auto;
 }
+.row-header {
+    padding: 0 30px;
+}
+
+.section-bottom {
+    background: url(../img/shadow-keyofferings.png) top left repeat;
+    width: 100%;
+    height: 15px;
+    position: relative;
+    margin: 10px 0;
+}
+    .section-bottom .center-tag {
+        background: url(../img/center-tag-keyofferings.png) top center no-repeat;
+        width: 302px;
+        height: 55px;
+        position: absolute;
+        top: 0;
+        left: 39.5%;
+    }
 
 .main-title {
   font-family: "franklin-gothic-ext-comp-urw",sans-serif;
@@ -130,7 +173,6 @@ textarea {
 }
 
 .body-copy {
-    font-family: "freight-text-pro",serif;
     font-size: 1.1em;
 }
 
@@ -161,13 +203,13 @@ textarea {
         position: relative;
         margin: 10px 0;
     }
-    .header .header-bottom .center-tag {
+    .header .section-bottom .center-tag {
         background: url(../img/center-tag-top.png) top center no-repeat;
         width: 158px;
         height: 35px;
         position: absolute;
         top: 0;
-        left: 45%;
+        left: 44.4%;
     }
 
 
@@ -201,10 +243,6 @@ textarea {
     Intro Section
 -------------------------------- */
 
-.intro {
-    background: url(../img/bgtile.png) top left repeat;
-}
-
 .intro .caption {
     overflow: hidden;
 }
@@ -233,32 +271,15 @@ textarea {
 -------------------------------- */
 
 .keyofferings {
-    background: url(../img/bgtile.png) top left repeat;
     margin: 0 0 -25px 0;
 }
     .keyofferings h1 {
         font-weight: normal;
-        font-family: "freight-text-pro",serif;
         font-size: 3em;
         color: #666;
         text-align: center;
         margin-top: 0;
         padding-top: 0.5em;
-    }
-    .keyofferings .keyofferings-bottom {
-        background: url(../img/shadow-keyofferings.png) top left repeat;
-        width: 100%;
-        height: 15px;
-        position: relative;
-        margin: 10px 0;
-    }
-    .keyofferings .keyofferings-bottom .center-tag {
-        background: url(../img/center-tag-keyofferings.png) top center no-repeat;
-        width: 302px;
-        height: 55px;
-        position: absolute;
-        top: 0;
-        left: 40%;
     }
     .keyofferings-list {
         overflow: hidden;
@@ -283,6 +304,7 @@ textarea {
             font-family: "franklin-gothic-ext-comp-urw",sans-serif;
             font-size: 1.6em;
             color: #fff;
+            letter-spacing: 1px;
             -webkit-box-shadow:  0px 2px 4px 0px rgba(0, 0, 0, 0.4);
                     box-shadow:  0px 2px 4px 0px rgba(0, 0, 0, 0.4);
         }
@@ -392,7 +414,6 @@ textarea {
         padding: 20px 0 0 0;
     }
     .casestudies .casestudy p {
-        font-family: "freight-text-pro",serif;
         color: #515052;
     }
     .casestudy .casestudy-images {
@@ -465,7 +486,6 @@ textarea {
     background: url(../img/bgtile.png) top left repeat;
 }
 .team h1 {
-    font-family: "freight-text-pro",serif;
     color: #514f52;
     font-weight: normal;
     font-size: 3em;
@@ -473,19 +493,6 @@ textarea {
     padding: 1em 0 0 0;
     text-align: center;
     letter-spacing: 1px;
-}
-.team h1 .emphasized {
-    font-family: "franklin-gothic-ext-comp-urw",sans-serif;
-    text-transform: uppercase;
-}
-.team h1 .emphasized.title-first {
-    color: #f89728;
-}
-.team h1 .emphasized.title-second {
-    color: #84b6b4;
-}
-.team h1 .emphasized.title-third {
-    color: #8c717a;
 }
 
 .team .team-members {
@@ -530,9 +537,27 @@ textarea {
     padding: 10px;
     -webkit-transition: all 0.5s ease-in-out;
 }
-.team .team-members .team-member-details:hover {
+.team .team-members .team-member-details.hover {
     top: 0;
 }
+
+
+/* --------------------------------
+    Location Map Section
+-------------------------------- */
+
+.locations {
+
+}
+.locations h1 {
+    font-family: "franklin-gothic-ext-comp-urw",sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 3em;
+    color: #fff;
+    letter-spacing: 3px;
+}
+
 
 
 
