--- a/site/css/sass/main.scss
+++ b/site/css/sass/main.scss
@@ -2,10 +2,14 @@
 @import "boilerplate-1";
 @import "catapult-variables";
 @import "catapult-common";
+@import "catapult-floater";
 @import "catapult-header";
 @import "catapult-intro";
 @import "catapult-keyofferings";
 @import "catapult-casestudies";
 @import "catapult-team";
 @import "catapult-locations";
+@import "catapult-contact";
+@import "catapult-labs";
+@import "catapult-donate";
 @import "boilerplate-2";
