--- a/site/css/sass/_catapult-common.scss
+++ b/site/css/sass/_catapult-common.scss
@@ -64,15 +64,15 @@ section {
     background: url(../img/divider.png) top left no-repeat;
 }
 
-.social {
-    position: fixed;
-    top: 300px;
-    left: 0;
-    width: 35px;
-    height: 100px;
-    background: #CCC;
-}
+.drawer {
+    padding: 0 0 30px 0;
+    background: url(../img/shadow-top.png) top left repeat-x, 
+                url(../img/case-studies-bgtile.png) top left repeat;
+    -webkit-box-shadow: inset 0px 20px 120px 0px rgba(0, 0, 0, 0.4);
+            box-shadow: inset 0px 20px 120px 0px rgba(0, 0, 0, 0.4);
 
-.body-copy {
-    font-size: 1.1em;
+    p {
+        color: rgba(255,255,255,0.80);
+        font-size: 1.1em;
+    }
 }
