--- a/site/css/sass/_catapult-header.scss
+++ b/site/css/sass/_catapult-header.scss
@@ -37,15 +37,14 @@
     
     .mainnav-item {
         float: left;
-        padding: 5px 10px 0 0;
+        padding: 5px 35px 0 0;
         color: #e38e15;
         text-transform: uppercase;
         font-family: $sansFont;
         font-size: 1.6em;
         letter-spacing: 0.09em;
         vertical-align: top;
-        text-shadow: 0px -1px 0px #c57b12;
-        filter: dropshadow(color=#c57b12, offx=0, offy=-1);
+        text-shadow: 1px 1px 0px rgba(255,255,255,0.3);
     }
     .mainnav-item:last-of-type {
         padding-right: 28px;
