--- a/site/css/sass/_catapult-keyofferings.scss
+++ b/site/css/sass/_catapult-keyofferings.scss
@@ -26,7 +26,7 @@
         a {
             text-decoration: none;
             display: block;
-            padding: 10px 0 6px 0;
+            padding: 12px 0 8px 0;
             width: 405px;
             background: rgb(200,50,50);
             text-align: center;
@@ -38,7 +38,8 @@
                     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.4);
 
             &:hover, 
-            &:active {
+            &:active,
+            &.active {
                 -webkit-box-shadow: inset 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
                         box-shadow: inset 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
             }
