--- a/site/css/sass/_catapult-contact.scss
+++ b/site/css/sass/_catapult-contact.scss
@@ -34,7 +34,7 @@
 
 	.contact-section {
 		padding: 0 0 20px 40px;
-		background: url(../img/contact/icons.png) top left no-repeat;
+		background: url(../img/homepage/contact/icons.png) top left no-repeat;
 		height: 14px;
 		margin-bottom: 3em;
 
