--- a/site/css/sass/_catapult-donate.scss
+++ b/site/css/sass/_catapult-donate.scss
@@ -57,7 +57,7 @@
 }
 
 .donate-forms {
-	background: url(../img/shadow-top.png) top left repeat-x, url(../img/bgtile-grey.png) top left repeat;
+	background: url(../img/homepage/shadow-top.png) top left repeat-x, url(../img/homepage/bg/bgtile-grey.png) top left repeat;
 	-webkit-box-shadow: inset 0px 20px 120px 0px rgba(0, 0, 0, 0.4);
           box-shadow: inset 0px 20px 120px 0px rgba(0, 0, 0, 0.4);
 }
