--- a/site/css/sass/_catapult-intro.scss
+++ b/site/css/sass/_catapult-intro.scss
@@ -5,7 +5,7 @@
 .intro {
     
     .center-tag {
-        background: url(../img/center-tag-top.png) top center no-repeat;
+        background: url(../img/homepage/bg/center-tag-top.png) top center no-repeat;
         width: 158px;
         height: 35px;
         margin: 0 auto;
@@ -20,7 +20,7 @@
         }
         .what-we-do {
             display: block;
-            background: url(../img/what-we-do.png) top left no-repeat;
+            background: url(../img/homepage/what-we-do.png) top left no-repeat;
             width: 84px;
             height: 114px;
             float: left;
