--- a/site/css/sass/_catapult-common.scss
+++ b/site/css/sass/_catapult-common.scss
@@ -3,7 +3,7 @@
 -------------------------------- */
 
 body {
-    background: url(../img/bgtile.jpg) top left repeat;
+    background: url(../img/homepage/bg/bgtile.jpg) top left repeat;
 }
 
 h1, h2, h3, h4, h5, p {
@@ -23,7 +23,7 @@ h1 {
 }
 
 section {
-    background: url(../img/shadow-top.png) top left repeat-x;
+    background: url(../img/homepage/shadow-top.png) top left repeat-x;
 }
 
 .level-one {
@@ -45,7 +45,7 @@ section {
 }
 
 .center-tag {
-    background: url(../img/center-tag.png) top center no-repeat;
+    background: url(../img/homepage/bg/center-tag.png) top center no-repeat;
     width: 319px;
     height: 55px;
     margin: 0 auto;
@@ -62,7 +62,7 @@ section {
 .divider {
     width: 900px;
     height: 3px;
-    background: url(../img/divider.png) top left no-repeat;
+    background: url(../img/homepage/divider.png) top left no-repeat;
 }
 
 .drawer {
@@ -73,5 +73,63 @@ section {
     p {
         color: rgba(255,255,255,0.80);
         font-size: 1.1em;
+    }
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgba(255,255,255,0.5);
+    z-index: 999;
+    top: 0;
+    left: 0;
+
+    .overlay-inner {
+        margin: 60px auto;
+        width: 700px;
+        padding: 60px 30px 30px 30px;
+        background: rgba(255,255,255,1);
+        position: relative;
+        overflow: hidden;
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
+                box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
+
+        .close {
+            display: block;
+            position: absolute;
+            z-index: 10;
+            top: 20px;
+            right: 20px;
+            width: 36px;
+            height: 37px;
+            background: url(../img/homepage/overlay-close-button.png) top left no-repeat;
+        }
+        .name {
+            color: $orange;
+            font-family: $sansFont;
+            font-size: 2em;
+            text-align: left;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin: 0;
+            padding: 0;
+        }
+        .title,
+        .company,
+        .twitter {
+            color: $orange;
+            margin: 0;
+            padding: 0;
+        }
+        .body {
+            color: rgb(84,83,83);
+            margin: 0.5em 0 0 0;
+        }
+        .headshot {
+            float: right;
+            margin: 10px;
+            border: 1px solid $orange;
+        }
     }
 }
