--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -12,7 +12,7 @@
 @import "catapult-locations";
 @import "catapult-contact";
 @import "catapult-drawer";
-@import "catapult-labs";
+@import "catapult-events";
 @import "catapult-donate";
 @import "catapult-footer";
 @import "boilerplate-2";
