--- a/site/wp-content/themes/catapult/sass/_catapult-drawer.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-drawer.scss
@@ -5,7 +5,7 @@
 	padding: 0 0 30px 0;
 	@include innerShadow(0px, 70px, 120px, 0px, 0.4);
 	
-	&.labs {
+	&.events {
 		background-image: url(../img/homepage/shadow-top.png), url(../img/homepage/casestudies/bgtile-insights.png);
 	}
 	
