--- a/site/wp-content/themes/catapult/sass/_catapult-common.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-common.scss
@@ -105,6 +105,15 @@ section:first-of-type {
     width: 900px;
     margin: 0 auto;
 }
+@media only screen 
+    and (max-width : 1024px) {
+    
+    .row {
+        width: 94%;
+        padding: 0 3%;
+    }
+    
+}
 .row-header {
     padding: 0 30px;
 }
@@ -287,6 +296,10 @@ section:first-of-type {
         overflow: hidden;
         @include borderShadow(0px, 0px, 10px, 3px, 0.5);
         
+        @media only screen and (max-width : 699px) {
+            width: 90%;
+        }
+        
         &.show {
             -webkit-animation: shrink 0.4s ease-out;
         }
@@ -326,5 +339,72 @@ section:first-of-type {
             margin: 10px;
             border: 1px solid $orange;
         }
+    }
+}
+
+.callout {
+    @include transitionWith(opacity, 0.3s);
+    background:rgba(255,255,255,1.0);
+    padding: 10px;
+    width: 120px;
+    margin: 5px;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 200;
+    box-shadow: 0px 0px 7px rgba(0,0,0,0.5);
+    
+    &.hide {
+        opacity: 0;
+    }
+    &.show {
+        opacity: 1;
+    }
+    
+    h2 {
+        display: inline-block; // So we can get the width
+        color: $darkGreyFont;
+        font-size: 1em;
+        padding: 0;
+        margin: 0;
+    }
+    
+    &:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        bottom: -10px;
+        left: 10%;
+        background: rgba(255,255,255,1.0);
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        /* reduce the damage in FF3.0 */
+        display: block;
+        width: 24px;
+        height: 24px;
+    }
+    
+    .callout__close {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        padding: 0 3px;
+        background: rgba(240,240,240,0.8);
+        border: 1px solid rgba(0,0,0,0.15);
+        border-radius: 7px;
+        transition: all 0.3s ease-out;
+        box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.5),
+        0 0 2px rgba(0,0,0,0.3);
+
+        /* Font styles */
+        color: rgba(150,150,150,0.7);
+        font-size: 0.7em;
+        text-decoration: none;
+        text-shadow: 1px 1px rgba(255,255,255,0.9);
+        
+        &:hover  { background: $orange; }
     }
 }
