--- a/site/wp-content/themes/catapult/sass/_catapult-intro.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-intro.scss
@@ -5,6 +5,14 @@
 .intro {
     padding: 120px 0 0 0;
     
+    @media only screen and (max-width : 720px) {
+        padding-top: 60px;
+    }
+    
+    #intro__canvas {
+        
+    }
+    
     .caption {
         overflow: hidden;
 
