--- a/site/wp-content/themes/catapult/sass/_catapult-variables.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-variables.scss
@@ -94,6 +94,13 @@ $sansFont: "franklin-gothic-ext-comp-urw",sans-serif;
             transition: all $duration ease-in-out;
 }
 
+@mixin transitionWith($type, $duration) {
+    -webkit-transition: $type $duration ease-in-out;
+       -moz-transition: $type $duration ease-in-out;
+         -o-transition: $type $duration ease-in-out;
+            transition: $type $duration ease-in-out;
+}
+
 @mixin greyFilter($amount) {
     -webkit-filter: grayscale(100%) brightness($amount) blur(3px);
        -moz-filter: grayscale(100%) brightness($amount) blur(3px);
